# project_template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: mypy.yml  test_api.yml
project/: projectname.py
project/default/: __init__.py  abstractmanager.py  exceptions.py
tools/: validate_config_files.py
website/web/: __init__.py  helpers.py
