[tool.poetry]
name = "project"
version = "0.1"
description = "Simple template used in most of the projects."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "BSD-3-Clause"

[tool.poetry.scripts]
start = "bin.start:main"
stop = "bin.stop:main"
update = "bin.update:main"
shutdown = "bin.shutdown:main"
run_backend = "bin.run_backend:main"
start_website = "bin.start_website:main"
scripts_manager = "bin.scripts_manager:main"

[tool.poetry.dependencies]
python = "^3.10"
redis = {version = "^5.0.8", extras = ["hiredis"]}
flask-restx = "^1.3.0"
werkzeug = "^3.0.3"
gunicorn = "^22.0.0"
psutil = "^6.0.0"

[tool.poetry.dev-dependencies]
ipython = "^8.26.0"
mypy = "^1.11.1"
types-redis = "^4.6.0.20240806"
types-psutil = "^6.0.0.20240621"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
