[project]
name = "project"
version = "0.1"
description = "Simple template used in most of the projects."
authors = [{name="Raphaël Vinot", email="raphael.vinot@circl.lu"}]
license = "BSD-3-Clause"
repository = "https://github.com/Lookyloo/project_template/"
requires-python = ">=3.12,<3.14"
readme = "README.md"

dynamic = [ "classifiers" ]

[tool.poetry]
classifiers = [
    'Intended Audience :: Science/Research',
]

[project.scripts]
start = "bin.start:main"
stop = "bin.stop:main"
update = "bin.update:main"
shutdown = "bin.shutdown:main"
run_backend = "bin.run_backend:main"
start_website = "bin.start_website:main"
scripts_manager = "bin.scripts_manager:main"

[tool.poetry.dependencies]
flask-restx = "^1.3.0"
werkzeug = "^3.1.3"
gunicorn = "^23.0.0"
psutil = "^7.1.0"
valkey = {extras = ["libvalkey"], version = "^6.1.1"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
types-psutil = "^7.0.0.20250822"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
